@@ -21,6 +21,7 @@ AC_CHECK_TOOL(STRIP, strip)
 AC_PROG_INSTALL
 dnl AC_PROG_MAKE_SET
 
+MY_CHECK_FOMIT_FRAME_POINTER
 MY_CHECK_EXCEPTIONS
 
 dnl Checks for header files.
